--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blackjack</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
-
+    <h1>Blackjack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p id="cards-el">Cards:</p>
+    <p id="sum-el">Sum: </p>
+    <button onclick="startGame()">START GAME</button>
     <script src="./index.js"></script>
 </body>
 </html>
